Overflow-x issue fixed (mobile)

--- a/src/index.css
+++ b/src/index.css
@@ -47,4 +47,9 @@ body {
   height: 1000px;
 }
 
+#home {
+  position: relative;
+  overflow-x: hidden;
+}
+
 /* ===== GENERAL STYLING ===== */
